--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,9 @@
 
     <script>
 
-        $(document).ready(function(){
+        $(document).ready(function () {
             //Set up button click handler for the search form:
-            $("button").click(function(){
+            $("button").click(function () {
                 // Get the person's entered address
                 var input = document.getElementById('address').value;
                 // Convert the address into the right format for the OpenStreetMaps search
@@ -30,22 +30,21 @@
                 var searchURL = "https://nominatim.openstreetmap.org/search/" + input + "?format=json&addressdetails=1&limit=1&polygon_svg=1";
                 //console.log(searchURL);
                 $.post(searchURL,
-                function (data) {
-                    console.log(data);
-                    var city = data[0].address.city;
-                    //console.log(city);
+                    function (data) {
+                        console.log(data);
+                        var city = data[0].address.city;
+                        //console.log(city);
 
-                    //document.getElementById("result").innerHTML = " is in "+city;
+                        //document.getElementById("result").innerHTML = " is in "+city;
 
-                    //Update info bubble on map:
-                    showRegs(L.latLng(data[0].lat,data[0].lon));
-                    //^^this only works because it can only get run after the body script tag initializes showCity
-                });
+                        //Update info bubble on map:
+                        showRegs(L.latLng(data[0].lat, data[0].lon));
+                        //^^this only works because it can only get run after the body script tag initializes showCity
+                    });
             });
         });
 
-        function calcCityChickens()
-        {
+        function calcCityChickens() {
             //String used to display the determined chicken eligibility:
             var result_str;
 
@@ -75,15 +74,14 @@
             if (fenceLength == "") //needs to ensure that it is also an integer
                 input_valid = false;
 
-            if (input_valid)
-            {
+            if (input_valid) {
                 //calculation of fence and coop area
                 var fenceArea = fenceWidth * fenceLength;
                 var coopArea = coopLength * coopWidth;
                 //calculation of outside space minus the footprint of the coop
                 var outsideArea = fenceArea - coopArea;
                 //calculation of the amount of chickens for both the inside and outside separately
-                var outsideChickens = Math.floor((outsideArea/4));
+                var outsideChickens = Math.floor((outsideArea / 4));
                 var coopChickens = Math.floor((coopArea / 1));
 
                 //determining if you use the outsideChickens number or coopChickens number
@@ -147,7 +145,8 @@
         </div>
         <form id="coopForm" style="display:none;">
             <br />
-            Enter the dimensions of your coop and its enclosing fence to estimate how many chickens you're allowed to have.
+            Enter the dimensions of your coop and its enclosing fence to estimate how many chickens you're allowed to
+            have.
             <br /><br />
             Coop: <br />
             Length:&nbsp;<input type="text" size="3" id="cwSTL" class="coopFormInput">
@@ -159,19 +158,20 @@
             <br />
             <button type="button" id="calc-chickens" onclick="calcCityChickens();">How many chickens can I have?</button>
         </form>
-        <div id="mapid" style="width: 600px; height: 400px;"></div>
+        <div id="mapid"></div>
         <script>
             //Set up map:
             var mymap = L.map('mapid').setView([38.66085, -90.362549], 11);
 
 
-            L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-                maxZoom: 18,
-                attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-                    '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-                    'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-                id: 'mapbox.streets'
-            }).addTo(mymap);
+            L.tileLayer(
+                'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+                    maxZoom: 18,
+                    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+                        '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+                        'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+                    id: 'mapbox.streets'
+                }).addTo(mymap);
 
             //Initialize popup object to show information on the map:
             var popup = L.popup();
@@ -179,12 +179,13 @@
             //Show chicken regulations at coordinates:
             function showRegs(coords) {
                 //Send the coordinates to OpenStreetMaps and get the returned city:
-                var queryURL = "https://nominatim.openstreetmap.org/reverse?format=json&lat="+coords.lat+"&lon="+coords.lng+"&zoom=18&addressdetails=1";
+                var queryURL = "https://nominatim.openstreetmap.org/reverse?format=json&lat=" + coords.lat + "&lon=" +
+                    coords.lng + "&zoom=18&addressdetails=1";
                 var xHR = new XMLHttpRequest();
                 xHR.addEventListener("load", function () {
                     //Parse result:
                     //console.log(xHR.responseText);
-                    var address=JSON.parse(xHR.responseText).address;
+                    var address = JSON.parse(xHR.responseText).address;
 
                     var place = address.city;
                     if (address.city == undefined) place = "unincorporated " + address.county;
@@ -193,49 +194,45 @@
                     // Look up the regulations string for resulting location using JS Objects (hashtables):
                     if (address.state == "Missouri") {
                         if (address.city == undefined) {
-                            if (missouri_counties[address.county]!=undefined) {
+                            if (missouri_counties[address.county] != undefined) {
                                 popup_content += missouri_counties[address.county];
-                            }
-                            else {
+                            } else {
                                 popup_content += "Unknown :(";
                             }
-                        }
-                        else {
-                            if (missouri_cities[address.city]!=undefined) {
+                        } else {
+                            if (missouri_cities[address.city] != undefined) {
                                 popup_content += missouri_cities[address.city];
-                            }
-                            else {
+                            } else {
                                 popup_content += "Unknown :(";
                             }
-                            if (address.city == "St. Louis")
-                            {
+                            if (address.city == "St. Louis") {
                                 coop_form = document.getElementById("coopForm").innerHTML;
-                                popup_content += "<form id=\"coopSTL\">" + coop_form + "<div id=\"chickens-response\"></div></form>";
+                                popup_content += "<form id=\"coopSTL\">" + coop_form +
+                                    "<div id=\"chickens-response\"></div></form>";
                             }
                         }
-                    }
-                    else {
+                    } else {
                         // Check Illinois too:
                         if (address.city == undefined) {
-                            if (illinois_counties[address.county]!=undefined) {
+                            if (illinois_counties[address.county] != undefined) {
                                 popup_content += illinois_counties[address.county];
-                            }
-                            else {
+                            } else {
                                 popup_content += "Unknown :(";
                             }
-                        }
-                        else {
-                            if (illinois_cities[address.city]!=undefined) {
+                        } else {
+                            if (illinois_cities[address.city] != undefined) {
                                 popup_content += illinois_cities[address.city];
-                            }
-                            else {
+                            } else {
                                 popup_content += "Unknown :(";
                             }
                         }
                     }
                     // Show source only if regulations shown
-                    if ((missouri_counties[address.county]!=undefined) || (missouri_cities[address.city]!=undefined) || (illinois_counties[address.county]!=undefined) || (illinois_cities[address.city]!=undefined)) {
-                        popup_content += '<br /><br />Source:<br /><a href="'+source_url+'">'+source_url+'</a>';
+                    if ((missouri_counties[address.county] != undefined) || (missouri_cities[address.city] !=
+                            undefined) || (illinois_counties[address.county] != undefined) || (illinois_cities[
+                            address.city] != undefined)) {
+                        popup_content += '<br /><br />Source:<br /><a href="' + source_url + '">' + source_url +
+                            '</a>';
                     }
 
                     //Display result on the map:
@@ -264,7 +261,6 @@
             }
 
             mymap.on('click', onMapClick);
-
         </script>
     </section>
 
