added st-louis-specific coop form back
(accidentily removed in 3b72f431fb429abf7563e0cb5e4743705be799c6)

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,23 @@
         <div>
             <p>Disclaimer: Your neighborhood might have different rules than the municipality it's in. Make sure to check with them as well!</p>
         </div>
+
+        <form id="coopForm" style="display:none;">
+            <br />
+            Enter the dimensions of your coop and its enclosing fence to estimate how many chickens you're allowed to
+            have.
+            <br /><br />
+            Coop: <br />
+            Length:&nbsp;<input type="text" size="3" id="cwSTL" class="coopFormInput">
+            Width:&nbsp;<input type="text" size="3" id="clSTL" class="coopFormInput">
+            <br />
+            Fence: <br />
+            Length:&nbsp;<input type="text" size="3" id="fwSTL" class="coopFormInput">
+            Width:&nbsp;<input type="text" size="3" id="flSTL" class="coopFormInput">
+            <br />
+            <button type="button" id="calcChickens">How many chickens can I have?</button>
+        </form>
+
         <div id="mapid">
             
         </div>
