--- a/app/index.html
+++ b/app/index.html
@@ -98,11 +98,10 @@
     </section>
 
     <footer class="end">
-        <img src="" alt="" height="84" width="84">
-        <img src="images\chicken1.png" alt="chicken 1" height="168" width="168">
-        <img class="chicken2" src="images\chicken2.png" alt="chicken 2" height="168" width="168">
-        <img src="images\chicken3.png" alt="chicken 3" height="168" width="168">
-        <img src="images\chicken4.png" alt="chicken 4" height="168" width="168">
+        <img src="images\chicken1.png" alt="chicken 1" height="168" width="168" />
+        <img class="chicken2" src="images\chicken2.png" alt="chicken 2" height="168" width="168" />
+        <img src="images\chicken3.png" alt="chicken 3" height="168" width="168" />
+        <img src="images\chicken4.png" alt="chicken 4" height="168" width="168" />
     </footer>
 </body>
 
