--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/@esri/arcgis-rest-geocoder@1.13.2/dist/umd/geocoder.umd.min.js"></script>
 
     <!-- fonts: -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
     <!-- Leaflet for the Map: -->
@@ -41,8 +41,7 @@
 <body>
     <header class="top">
         <section class="logo">
-            <h1 id="orange">Backyard</h1>
-            <h1 id="black">Chickens</h1>
+            <h1 id="black"><span id="orange">Backyard</span> Chickens</h1>
         </section>
         <nav class="menu">
             <ul class="menu-list">
