Button and Disclaimer Adjustment
Fixing small alignment issues above the map.

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
                 <input class="search" type="text" placeholder="Enter your address to find out" name="address" id="address">
             </form>
             <div>
-                <button class="btn" type="submit" id="submit"><i class="fas fa-arrow-circle-right"></i></button>
+                <button class="btn" type="submit" id="submit"><i class="fas fa-arrow-circle-right fa-lg" id="orange"></i></button>
             </div>
 
         </div>
