Improved styling on input field and new favicon
Improved styling on input field and new favicon

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="shortcut icon" href="images/chicken_favicon.ico" type="image/x-icon">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <!-- arcgis-rest-request and arcgis-rest-geocoder included for geocoding, reverse geocoding, and suggest (autocomplete) -->
@@ -60,7 +61,7 @@
 
     <section class="middle">
         <div class="instructions">
-            <h2>Can I have backyard chickens???</h2>
+            <h2>Can I have backyard chickens?</h2>
         </div>
 
         <div class="address">
