--- a/app/index.html
+++ b/app/index.html
@@ -93,13 +93,13 @@
         <div id="mapid">
             
         </div>
-        <div id=about>
+        <div id="about">
             <H1>About</H1>
             <p>The purpose of this project is to better communicate chicken regulations by 
                 municipality to the people of Saint Louis and Saint Louis County based on 
                 local municipality zoning regulations.<br>
                 This project was built by the Saint Louis Code for America Brigade, OpenSTL. 
-                This project is open source and is free to be reused and distributed.<br>
+                This project is open source and is free to be reused and distributed.<br><br>
                 The files can be found on the OpenSTL Backyard Chickens <a href="https://github.com/OpenDataSTL/backyard-chickens">GitHub Page</a>
             </p>
         </div>
